--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -11,6 +11,9 @@ foreach(flag_var
    endif(${flag_var} MATCHES "/MD")
 endforeach(flag_var)
 
+add_definitions( -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS )
+add_definitions( -D_SCL_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS )
+
 add_executable (abort abort.c) 
 add_executable (assert assert.c) 
 add_executable (complex complex.c) 
