--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable (abort abort.c)
 add_executable (assert assert.c) 
 add_executable (exception exception.c) 
 add_executable (false false.c) 
+add_executable (infinite_loop infinite_loop.c) 
 add_executable (is_debugger_present is_debugger_present.c) 
 add_executable (output_debug_string output_debug_string.c) 
 add_executable (true true.c) 
