A simple test program that causes a leak.

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable (exception exception.c)
 add_executable (false false.c) 
 add_executable (infinite_loop infinite_loop.c) 
 add_executable (is_debugger_present is_debugger_present.c) 
+add_executable (leak leak.c) 
 add_executable (messagebox messagebox.c) 
 add_executable (output_debug_string output_debug_string.c) 
 add_executable (true true.c) 
